@@ -4,11 +4,9 @@ Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
 - unloading fold handlers should update buffers
-- switching syntax modes does not invalidate line contexts
 - split view line insert: repainted twice, selection problems
 - bizarre dockable window manager button layout problem
 - plugin unload dependencies
-- plugin unload & bsh
 - save file --> collapse to < visibleLines -- click beyond last line
   --> exception
 - while loading --> scroll bar
